--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,3 +8,5 @@ jobs:
     uses: gardenlinux/package-build/.github/workflows/build.yml@main
     with:
       release: ${{ github.ref == 'refs/heads/main' }}
+      build_dep: |
+        gardenlinux/package-golang 1.24.4-1gl0+bp1877
